# Prism

./: .gitignore  Cargo.toml  NOTICE  README.ko.md  README.md
src/: config.rs  main.rs  provider.rs  proxy.rs  router.rs  types.rs  ui.rs
src/proxy/: handlers.rs  mod.rs  passthrough.rs  tests.rs  tools.rs  translate_request.rs  translate_response.rs  upstream_error.rs
src/proxy/streaming/: anthropic.rs  mod.rs  responses.rs
static/: index.html  presets.js
